# projet-soa-ecommerce-enit-2025-3AINFO1

./: .env.example  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  create_structure.ps1  docker-compose.yml  docker-compose.yml.bak  docker-compose.yml.bak2  pom.xml  readme.md  requirements.txt  requirements.txt.bak
app/: __init__.py  feature_store.py  kafka_event_handler.py  main.py  model_client.py  models.py  recommender.py
cart-service/: README.md
docker/: .dockerignore  Dockerfile  docker-compose.yml
feedback/: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  postman_collection.json  pyproject.toml  requirements.txt
feedback/alembic/: env.py
feedback/alembic/versions/: 001_create_feedback_table.py
feedback/app/: config.py  database.py  main.py
feedback/app/middleware/: __init__.py  auth_middleware.py
feedback/app/models/: __init__.py  feedback.py
feedback/app/repositories/: __init__.py  feedback_repository.py
feedback/app/routers/: __init__.py  feedback_router.py
feedback/app/schemas/: __init__.py  feedback.py
feedback/app/services/: __init__.py  catalog_client.py  feedback_service.py
feedback/app/utils/: __init__.py  cache.py  security.py
feedback/scripts/: generate_token.py  setup.bat  setup.sh
feedback/tests/: test_feedback.py
inventory-service/: .dockerignore  Dockerfile  README.md  pom.xml
mock-catalogue/: pom.xml
order_service/: .env  .gitignore  Dockerfile  Dockerfile.mock  README.md  TASK_PROGRESS.md  docker-compose-mock.yml  docker-compose.mock.yml  docker-compose.yml  (+5 more)
(+358 files in other folders)
